tests/integration/error/continue_outside_loop.alo
// expect-error: 'continue' can only be used inside a loop

fun main() -> void {
    continue;
}
